criacao de telas html e estilizacao

--- a/frontend/html/tela1.html
+++ b/frontend/html/tela1.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/frontend/css/style.css">
+    <link rel="icon" href="/frontend/img/logo RX SOFTWARE.jpg" type="image/png">
+
     <title>Controle de Leitos</title>
 </head>
 <body>
@@ -11,7 +13,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <h1>
-                    <img src="logo.png" alt="Logo da Empresa" class="logo">
+                    <img src="/frontend/img/logo RX SOFTWARE.jpg" alt="Logo da Empresa" class="logo">
                 </h1>
                 <div class="nav-buttons">
                     <button class="btn home">Home</button>
@@ -34,17 +36,17 @@
                 <div class="pricing-item">
                     <h2>Leito Comum</h2>
                     <p>Acomodação básica e confortável.</p>
-                    <button class="btn-details" onclick="window.open('details-comum.html', '_blank')">Mais detalhes</button>
+                    <button class="btn-details" onclick="window.open('leitocomum.html', '_blank')">Mais detalhes</button>
                 </div>
                 <div class="pricing-item">
                     <h2>Leito Premium</h2>
                     <p>Maior privacidade e recursos adicionais.</p>
-                    <button class="btn-details" onclick="window.open('details-premium.html', '_blank')">Mais detalhes</button>
+                    <button class="btn-details" onclick="window.open('leitopremium.html', '_blank')">Mais detalhes</button>
                 </div>
                 <div class="pricing-item">
                     <h2>Leito Executivo</h2>
                     <p>Conforto e serviços de alta qualidade.</p>
-                    <button class="btn-details" onclick="window.open('details-executivo.html', '_blank')">Mais detalhes</button>
+                    <button class="btn-details" onclick="window.open('leitoexecutivo.html', '_blank')">Mais detalhes</button>
                 </div>
             </div>
         </section>
