--- a/frontend/html/leitocomum.html
+++ b/frontend/html/leitocomum.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/frontend/css/leitos.css">
+    <link rel="stylesheet" href="/frontend/css/leitocomum.css">
     <title>Detalhes do Leito Comum</title>
 </head>
 <body>
